changes "immacualte consistency" to italics, ensures "Vote BC" is grey, gives elections dropdown light background and ensures no overlap with search form when used in landscape on a phone

--- a/app/assets/stylesheets/_top_nav.scss
+++ b/app/assets/stylesheets/_top_nav.scss
@@ -25,6 +25,7 @@
 }
 
 .navbar h3 a:link {
+  color: #555;
   text-decoration: none;
 }
 
@@ -172,7 +173,7 @@ transition:             transform 200ms ease;
 }
 
 .navbar.at-top .nav-menu .dropdown-content {
-  background: transparent;
+  background-color:rgba(0, 0, 0, 0.3);
 }
 
 .navbar.at-top .nav-menu .dropdown-content a:hover {
